chore: make project Java 8 compatible
- Replace maven.compiler.release with source/target=1.8 (--release requires JDK 9+)
- Downgrade JGit 6.8.0 -> 5.13.3 (6.x requires Java 11 minimum)
- Downgrade JGraphT 1.5.2 -> 1.4.0 (1.5.x compiled to Java 11 bytecode)
- Remove var keyword (Java 10+) in RepoScannerImpl.java
- Replace Map.of()/List.of()/Stream.toList() (Java 9+/16+) in IngestionController.java
- Replace RepoConfig::name record-accessor with RepoConfig::getName bean getter
- Replace text blocks and .formatted() (Java 15+) in ApiIntegrationTest.java
- Replace Files.writeString() (Java 11+) with Files.write() in tests
- Replace no-arg orElseThrow() (Java 10+) with supplier overload in integration tests
- Fix record-style accessors (.name()/.buildTool() etc) in OrchestratorScanTest
- Add missing import for RepoConfig in MavenBuildParserImplTest
- Fix jakarta.validation -> javax.validation in ScanDirectoryRequest (Spring Boot 2.x)