@@ -110,14 +110,7 @@ class ApiIntegrationTest {
     void addRepoReturns201() throws Exception {
         mockMvc.perform(post("/api/v1/ingestion/repos")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("""
-                                {
-                                  "name": "test-add-repo",
-                                  "url": "https://github.com/example/test.git",
-                                  "branch": "main",
-                                  "buildTool": "MAVEN"
-                                }
-                                """)
+                        .content("{\"name\": \"test-add-repo\", \"url\": \"https://github.com/example/test.git\", \"branch\": \"main\", \"buildTool\": \"MAVEN\"}")
                         .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.repo").value("test-add-repo"));
@@ -127,9 +120,7 @@ class ApiIntegrationTest {
     void addRepoMissingNameReturns400() throws Exception {
         mockMvc.perform(post("/api/v1/ingestion/repos")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("""
-                                {"url": "https://github.com/example/test.git"}
-                                """)
+                        .content("{\"url\": \"https://github.com/example/test.git\"}")
                         .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isBadRequest());
     }
@@ -141,11 +132,7 @@ class ApiIntegrationTest {
         // tempRepoContainer has no .git subdirectories → empty result
         mockMvc.perform(post("/api/v1/ingestion/scan-directory")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("""
-                                {
-                                  "directoryPath": "%s"
-                                }
-                                """.formatted(tempRepoContainer.toAbsolutePath()))
+                        .content(String.format("{\"directoryPath\": \"%s\"}", tempRepoContainer.toAbsolutePath()))
                         .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.registered").isArray())
@@ -157,15 +144,11 @@ class ApiIntegrationTest {
         // Create a sub-directory that looks like a git repo
         Path repoDir = tempRepoContainer.resolve("scan-api-test-repo");
         Files.createDirectories(repoDir.resolve(".git"));
-        Files.writeString(repoDir.resolve("pom.xml"), "<project/>");
+        Files.write(repoDir.resolve("pom.xml"), "<project/>".getBytes(java.nio.charset.StandardCharsets.UTF_8));
 
         mockMvc.perform(post("/api/v1/ingestion/scan-directory")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("""
-                                {
-                                  "directoryPath": "%s"
-                                }
-                                """.formatted(tempRepoContainer.toAbsolutePath()))
+                        .content(String.format("{\"directoryPath\": \"%s\"}", tempRepoContainer.toAbsolutePath()))
                         .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.registered").isArray())
@@ -176,9 +159,7 @@ class ApiIntegrationTest {
     void scanDirectoryWithInvalidPathReturns400() throws Exception {
         mockMvc.perform(post("/api/v1/ingestion/scan-directory")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("""
-                                {"directoryPath": "/no/such/directory/xyz"}
-                                """)
+                        .content("{\"directoryPath\": \"/no/such/directory/xyz\"}")
                         .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("$.error").isString());
